Added running total to shop view

--- a/Shop.MAUI/Views/ShopView.xaml
+++ b/Shop.MAUI/Views/ShopView.xaml
@@ -29,6 +29,8 @@
                     HorizontalOptions="End"/>
                 <BoxView BackgroundColor="White" 
                     WidthRequest="50"/>
+                <Label Text="{Binding CartPrice}"
+                       VerticalOptions="Center"/>
                 <ImageButton Source="cart.png"
                     Clicked="GoToShoppingCartPage"
                     CornerRadius="10"
