--- a/Shop.MAUI/Views/ShoppingCartView.xaml
+++ b/Shop.MAUI/Views/ShoppingCartView.xaml
@@ -6,8 +6,8 @@
     <ScrollView>
         <VerticalStackLayout Spacing="15" Padding="10">
             <Label Text="{Binding Cart.Name}" FontSize="30" FontAttributes="Bold" HorizontalOptions="Center"></Label>
-            <Frame BorderColor="LightGray" CornerRadius="10" WidthRequest="600">
-                <ListView ItemsSource="{Binding Products}" HorizontalOptions="Center" WidthRequest="600" SelectionMode="None">
+            <Frame BorderColor="LightGray" CornerRadius="10" WidthRequest="820">
+                <ListView ItemsSource="{Binding Products}" HorizontalOptions="Center" WidthRequest="820" SelectionMode="None">
                     <ListView.ItemTemplate>
                         <DataTemplate>
                             <ViewCell>
@@ -17,6 +17,8 @@
                                         <ColumnDefinition Width="150"/>
                                         <ColumnDefinition Width="150"/>
                                         <ColumnDefinition Width="100"/>
+                                        <ColumnDefinition Width="100"/>
+                                        <ColumnDefinition Width="200"/>
                                     </Grid.ColumnDefinitions>
                                     <ImageButton Grid.Column="0" 
                                                  Source="x.png" 
@@ -30,6 +32,8 @@
                                     <Label Grid.Column="1" Text="{Binding Model.Name}" VerticalOptions="Center"/>
                                     <Label Grid.Column="2" Text="{Binding DisplayPriceQuantity}" VerticalOptions="Center"/>
                                     <Label Grid.Column="3" Text="{Binding DisplayTotalItemPrice}" VerticalOptions="Center"/>
+                                    <Label Grid.Column="4" Text="{Binding MarkdownShopDisplay}" IsVisible="{Binding IsMarkdownVisible}" VerticalOptions="Center"/>
+                                    <Label Grid.Column="5" Text="Buy 1 Get 1 Free" IsVisible="{Binding IsBogoVisible}" VerticalOptions="Center"/>
                                 </Grid>
                             </ViewCell>
                         </DataTemplate>
