Added import products page

--- a/Shop.MAUI/AppShell.xaml
+++ b/Shop.MAUI/AppShell.xaml
@@ -29,4 +29,7 @@
     <ShellContent
         ContentTemplate="{DataTemplate views:ConfigurationView}"
         Route="ConfigurationPage" />
+    <ShellContent
+        ContentTemplate="{DataTemplate views:ImportView}"
+        Route="ImportPage" />
 </Shell>
