Deleted import products page and moved funcitonality to be directly on inventory view

--- a/Shop.MAUI/Views/InventoryView.xaml
+++ b/Shop.MAUI/Views/InventoryView.xaml
@@ -45,7 +45,7 @@
                     MaximumWidthRequest="50"
                     HorizontalOptions="End"/>
                 <Button Text="Import From CSV"
-                        Clicked="GoToImportPage"
+                        Clicked="OpenFilePicker"
                         FontSize="12"
                         FontAttributes="Bold"
                         TextColor="Black"
